# dcc-mcp-aftereffects

./: CHANGELOG.md  README.md  pyproject.toml  release-please-config.json
src/dcc_mcp_aftereffects/: __init__.py  bridge.py  server.py
src/dcc_mcp_aftereffects/aftereffects_cep/: index.html
src/dcc_mcp_aftereffects/aftereffects_cep/CSXS/: manifest.xml
src/dcc_mcp_aftereffects/aftereffects_cep/js/: index.js
src/dcc_mcp_aftereffects/aftereffects_cep/jsx/: host.jsx
src/dcc_mcp_aftereffects/skills/aftereffects-project/: SKILL.md  tools.yaml
src/dcc_mcp_aftereffects/skills/aftereffects-project/scripts/: create_motion_intro.py  inspect_project.py  list_compositions.py  save_project.py
tests/: test_bridge.py  test_package.py  test_skills.py
tools/: lint_skills.py
